Solution to task BJS2-47156. Improved code quality based on review comments